--- a/Kindergarten/Kindergarten/app/evaluate.html
+++ b/Kindergarten/Kindergarten/app/evaluate.html
@@ -10,6 +10,7 @@
   <link rel="stylesheet" href="bootstrap/css/bootstrap.min.css">
   <script src="jquery/jquery.min.js"></script>
   <script src="bootstrap/js/bootstrap.min.js"></script>
+  <script src="js/jf_kindergarten_evaluate.js"></script>
   <style>
 	#table > thead > tr > th,
 	#table > thead > tr > td {
@@ -129,7 +130,7 @@
 							<div class="pull-left" style="padding-left:50px;">
 							  <a href="#" class="btn btn-default btn-flat">修改</a>
 							</div>
-							<div class="pull-right" style="padding-right:50px;">
+                            <div onclick="logout()" class="pull-right" style="padding-right:50px;">
 							  <a href="#" class="btn btn-default btn-flat">退出</a>
 							</div>
 						  </li>
