--- a/Kindergarten/Kindergarten/app/evaluate.html
+++ b/Kindergarten/Kindergarten/app/evaluate.html
@@ -166,7 +166,7 @@
 							指标：
 						</div>
 						<div style="font-size:18px;background-color:#E2F7FF;padding:5px;border:1px solid #73C8F7;border-radius:10px;">A1环境支持/B1园舍与场地/C1园舍C1园舍建筑C1园舍建筑C1园舍建筑建筑</div></td>
-					<td style="width:60px;vertical-align:middle">
+                    <td onclick="goback();" style="width:60px;vertical-align:middle">
 						<img src="images/back.png"></img>
 					</td>
 					<!--<td style="width:60px;">
