--- a/Kindergarten/Kindergarten/app/evaluate.html
+++ b/Kindergarten/Kindergarten/app/evaluate.html
@@ -244,7 +244,7 @@
   <div class="container" style="width:100%;margin-bottom:20px;" id="levelQuestion">
   	<div style="text-align:center;width:100%">
 		<a href="#" onclick="pageUp()"><img src="images/pageup.png" style="margin-right:100px;"></img></a>
-		<a href="#" onclick="pageDown()"><img src="images/pagedown.png"></img></a>
+        <a href="#" onclick="pageDown();"><img src="images/pagedown.png"></img></a>
 	</div>
   </div>
   
@@ -570,7 +570,7 @@
   <!-- /.modal-dialog -->
   
   
-  <script>
+  <!--<script>
   	function backPage(){
   		jsInterface.closeEvaPage();
   	}
@@ -588,6 +588,6 @@
 		var t = jsInterface.initQuestion('001');
 		$("#levelQuestion").html(t);
 	}
-  </script>
+  </script>-->
 </body>
 </html>
