--- a/Kindergarten/Kindergarten/app/login.html
+++ b/Kindergarten/Kindergarten/app/login.html
@@ -545,7 +545,7 @@ function jsGotoCategory(){
 				                	    <!-- <a href="#" class="fa fa-question-circle"></a> -->
 				                	</div>
 				                	<div class="form-group text-center">
-				                	    <span id='btn_login' class="" onclick="hello();"></span>
+				                	    <span id='btn_login' class="" onclick="login();"></span>
 				                	</div>
 				                </div>
 			                </div>
