--- a/Kindergarten/Kindergarten/app/login.html
+++ b/Kindergarten/Kindergarten/app/login.html
@@ -557,6 +557,9 @@ function jsGotoCategory(){
 		        <div class=" text-center bottom_zi_class">
 		        	<img src="images/login/logo_zi.png" width="230">
 		        </div>
+                <div class=" text-center bottom_zi_class">
+                    <a href="#" style="font-size:20px;float:right" onclick="online_login();">切换在线评估</a>
+                </div>
 		    </div>
 		</div>
 		
