--- a/Kindergarten/Kindergarten/app/asslevel.html
+++ b/Kindergarten/Kindergarten/app/asslevel.html
@@ -39,6 +39,20 @@
 	  text-align:left; 
 	  margin:auto;
 	}
+  #levelTableId > tbody > tr > th,
+  #levelTableId > tfoot > tr > th,
+  #levelTableId > tbody > tr > td,
+  #levelTableId > tfoot > tr > td {
+      padding-top: 8px;
+      padding-bottom: 8px;
+      padding-right: 8px;
+      padding-left:8px;
+      line-height: 1.42857143;
+      vertical-align: middle;
+      border-top: 1px solid #ddd;
+      text-align:left;
+      margin:auto;
+  }
 	.nav>li>a:focus, .nav>li>a:hover {
 		text-decoration: none;
 		background-color: #68cbd0;
