--- a/Kindergarten/Kindergarten/app/asslevel.html
+++ b/Kindergarten/Kindergarten/app/asslevel.html
@@ -198,10 +198,10 @@
 	  <table class="table table-bordered" id="levelTableId">
         <thead style="font-size:20px;">
           <tr>
-            <td style="width:20%;background-color:#E2F3A8;text-align:center;vertical-align: middle;">一级指标</td>
-            <td style="width:25%;background-color:#E2F3A8;text-align:center;vertical-align: middle;">二级指标</td>
-            <td style="width:45%;background-color:#E2F3A8;text-align:center;vertical-align: middle;">三级指标</td>
-			<td style="width:10%;background-color:#E2F3A8;text-align:center;vertical-align: middle;">完成</td>
+              <td style="width:20%;background-color:#E2F3A8;text-align:center;vertical-align: middle; color:#508c10">一级指标</td>
+            <td style="width:25%;background-color:#E2F3A8;text-align:center;vertical-align: middle;color:#508c10">二级指标</td>
+            <td style="width:45%;background-color:#E2F3A8;text-align:center;vertical-align: middle;color:#508c10">三级指标</td>
+			<td style="width:10%;background-color:#E2F3A8;text-align:center;vertical-align: middle;color:#508c10">完成</td>
           </tr>
         </thead>
         <tbody id="asslevelid" style="color:#337ab7;font-size:20px;">
