--- a/Kindergarten/Kindergarten/app/evaluate.html
+++ b/Kindergarten/Kindergarten/app/evaluate.html
@@ -487,7 +487,7 @@
                       <table class="table table-bordered ftable">
                           <tr>
                               <td>幼儿是否在园午休</td>
-                              <td>
+                              <td id="info47">
                                   
                               </td>
                           </tr>
@@ -615,6 +615,19 @@
                   </div>
               </div>
           </div>
+          <div class=".container">
+              <div class="row">
+                  <div class="col-md-12">
+                      <table class="table table-bordered ftable">
+                          <tr>
+                              <td>办学理念</td>
+                              <td id="info78"></td>
+                          </tr>
+                      </table>
+                  </div>
+              </div>
+          </div>
+      </div>
           <div class="modal-footer">
               <button type="button" class="btn btn-info pull-center" data-dismiss="modal" id="cancel">关闭</button>
           </div>
