--- a/Kindergarten/Kindergarten/app/evaluate.html
+++ b/Kindergarten/Kindergarten/app/evaluate.html
@@ -127,16 +127,16 @@
 				<td style="width:30%;text-align:right;">
 					<table style="float:right">
 						<tr>
-							<td style="padding-right:20px;" data-toggle="modal" data-target="#myModal"><img src="images/modify.png"></img><br/><span class="hidden-xs" style="color:#fff;font-size:12px;">园所信息</span></td>
-							<td style="padding-right:20px;" onclick="openHelp();"><img src="images/help.png"></img><br/><span class="hidden-xs" style="color:#fff;font-size:12px;">评估服务</span></td>
-							<td class="dropdown" style="padding-right:20px;">
-								<a href="#" class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false" style="display:inline;">
+							<td style="padding-right:20px; text-align:center" data-toggle="modal" data-target="#myModal"><img src="images/modify.png"></img><br/><span class="hidden-xs" style="color:#fff;font-size:18px;">园所信息</span></td>
+							<td style="padding-right:20px; text-align:center" onclick="openHelp();"><img src="images/help.png"></img><br/><span class="hidden-xs" style="color:#fff;font-size:18px;">评估服务</span></td>
+							<td class="dropdown" style="padding-right:20px; text-align:center">
+								<span class="dropdown-toggle" data-toggle="dropdown" aria-expanded="false" style="display:inline;">
 								  <!-- The user image in the navbar-->
 								  <img src="images/person.png" class="logo">
 								  <!-- hidden-xs hides the username on small devices so only the image appears. -->
 								  <span class="hidden-xs"><b></b></span>
-                                  <br/><span class="hidden-xs" style="color:#fff;font-size:12px;">个人信息</span>
-								</a>
+                                  <br/><span class="hidden-xs" style="color:#fff;font-size:18px;">个人信息</span>
+								</span>
 								<ul class="dropdown-menu" style="width:250px;margin-left:-220px;">
 								  <!-- Menu Body -->
 								  <li>
