--- a/Kindergarten/Kindergarten/app/evaluate.html
+++ b/Kindergarten/Kindergarten/app/evaluate.html
@@ -232,8 +232,8 @@
   </div>
   <div class="container" style="width:100%;margin-bottom:20px;">
   	<div style="text-align:center;width:100%">
-		<a href="#" onclick="pageUp()"><img src="images/pageup.png" style="margin-right:100px;cursor:pointer;width:12%"></img></a>
-		<a href="#" onclick="pageDown()"><img src="images/pagedown.png" style="cursor:pointer;width:12%"></img></a>
+    <a href="#"  onclick="pageUp()"><img id="imgPageUp" src="images/pageup.png" style="margin-right:100px;cursor:pointer;width:12%"></img></a>
+		<a href="#" onclick="pageDown()"><img id="imgPageDown" src="images/pagedown.png" style="cursor:pointer;width:12%"></img></a>
 	</div>
   </div>
   
